; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_base.c_base_extent_hooks_set.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_base.c_base_extent_hooks_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@ATOMIC_RELEASE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @base_extent_hooks_set(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = call i32* @base_extent_hooks_get(%struct.TYPE_4__* %6)
  store i32* %7, i32** %5, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* @ATOMIC_RELEASE, align 4
  %12 = call i32 @atomic_store_p(i32* %9, i32* %10, i32 %11)
  %13 = load i32*, i32** %5, align 8
  ret i32* %13
}

declare dso_local i32* @base_extent_hooks_get(%struct.TYPE_4__*) #1

declare dso_local i32 @atomic_store_p(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
